Корректировка сборки